added more descriptions
